# c-leran-by-practice

./: .gitignore  CMakeLists.txt  README.md  main.c
.github/workflows/: c-cpp.yml
src/001/: Node.h  README.txt  Shape.h  main.c  notes.md
src/002/: main.c  questions.txt  readme.md
src/003/: main.c
